--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1
+{ font-size: 15px;
+  position: relative;
+  left:66%;
+   color:aqua;
+}
